--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-helmet": "^6.0.0-beta",
+        "react-switch": "^5.0.1",
+        "react-tooltip": "^4.2.10",
         "rehype-react": "^3.1.0",
         "remark-react": "^5.0.1",
         "reveal.js": "^3.8.0"
